--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <title>GitHub profile</title>
 </head>
 
-<body class="dark-theme">
+<body class="light-theme">
 
     <header class="header-default header-main" id="header-default">
 
