Created overview and repositories menu

--- a/index.html
+++ b/index.html
@@ -88,6 +88,26 @@
             <i class="fa fa-bell-o"></i>
         </span>
     </header>
+
+    <nav class="navbar-options" id="navbar-options">
+        <span class="nav-item selected-item">
+            <i class="fa fa-leanpub nav-icon"></i>
+            Overview
+        </span>
+        <span class="nav-item">
+            <i class="fa fa-inbox nav-icon"></i>
+            Repositories
+            <span class="notification-icon" id="icon-repositories-number">12</span>
+        </span>
+        <span class="nav-item">
+            <i class="fa fa-list-alt nav-icon"></i>
+            Projects
+        </span>
+        <span class="nav-item">
+            <i class="fa fa-cube nav-icon"></i>
+            Packages
+        </span>
+    </nav>
     
     <!-- Include a main JS -->
     <script src="./js/custom-profile-script.js"></script>
